tests/invalid_nodepend/unbound_type_vars.err_exp
unbound_type_vars.m:025: In declaration for predicate `p1'/1:
unbound_type_vars.m:025:   error in type class constraints: type variable [38;5;87m`T2'[39;49m
unbound_type_vars.m:025:   occurs in the constraints, but [38;5;203mis not determined[39;49m by
unbound_type_vars.m:025:   the predicate's argument types.
unbound_type_vars.m:025:   All types occurring in typeclass constraints must be
unbound_type_vars.m:025:   fully determined. A type is fully determined if one
unbound_type_vars.m:025:   of the following holds:
unbound_type_vars.m:025:   1) All type variables occurring in the type are
unbound_type_vars.m:025:   determined.
unbound_type_vars.m:025:   2) The type occurs in a constraint argument, that
unbound_type_vars.m:025:   argument is in the range of some functional
unbound_type_vars.m:025:   dependency for that class, and the types in all of
unbound_type_vars.m:025:   the domain arguments for that functional dependency
unbound_type_vars.m:025:   are fully determined.
unbound_type_vars.m:025:   A type variable is determined if one of the
unbound_type_vars.m:025:   following holds:
unbound_type_vars.m:025:   1) The type variable occurs in the argument types of
unbound_type_vars.m:025:   the predicate, function, or constructor which is
unbound_type_vars.m:025:   constrained.
unbound_type_vars.m:025:   2) The type variable occurs in a type which is fully
unbound_type_vars.m:025:   determined.
unbound_type_vars.m:025:   See the "Functional dependencies" section of the
unbound_type_vars.m:025:   reference manual for details.
unbound_type_vars.m:028: In declaration for predicate `p2'/2:
unbound_type_vars.m:028:   error in type class constraints: type variable [38;5;87m`T3'[39;49m
unbound_type_vars.m:028:   occurs in the constraints, but [38;5;203mis not determined[39;49m by
unbound_type_vars.m:028:   the predicate's argument types.
unbound_type_vars.m:032: In declaration for predicate `p3'/1:
unbound_type_vars.m:032:   error in type class constraints: type variable [38;5;87m`T2'[39;49m
unbound_type_vars.m:032:   occurs in the constraints, but [38;5;203mis not determined[39;49m by
unbound_type_vars.m:032:   the predicate's argument types.
unbound_type_vars.m:035: In declaration for predicate `p4'/1:
unbound_type_vars.m:035:   error in type class constraints: type variable [38;5;87m`T2'[39;49m
unbound_type_vars.m:035:   occurs in the constraints, but [38;5;203mis not determined[39;49m by
unbound_type_vars.m:035:   the predicate's argument types.
unbound_type_vars.m:038: In declaration for predicate `p5'/1:
unbound_type_vars.m:038:   error in type class constraints: type variable [38;5;87m`T2'[39;49m
unbound_type_vars.m:038:   occurs in the constraints, but [38;5;203mis not determined[39;49m by
unbound_type_vars.m:038:   the predicate's argument types.
unbound_type_vars.m:038: In declaration of predicate `unbound_type_vars.p5'/1:
unbound_type_vars.m:038:   error: type variable [38;5;87m`T2'[39;49m is [38;5;171muniversally[39;49m
unbound_type_vars.m:038:   [38;5;171mconstrained,[39;49m but is [38;5;171mexistentially quantified.[39;49m
